force-app/main/default/objects/b3o__Question_Option__c/b3o__Question_Option__c.object-meta.xml
<CustomObject>
    <label>Question Option</label>
    <nameField>
        <displayFormat>Q-OPT-{0}</displayFormat>
        <label>Question Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>