force-app/main/default/objects/b3o__Question_Option__c/fields/b3o__Label__c.field-meta.xml
<CustomField>
    <fullName>b3o__Label__c</fullName>
    <label>Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>