force-app/main/default/objects/b3o__Question_Option__c/fields/b3o__Order__c.field-meta.xml
<CustomField>
    <fullName>b3o__Order__c</fullName>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>