force-app/main/default/objects/b3o__Question_Option__c/fields/b3o__Score__c.field-meta.xml
<CustomField>
    <fullName>b3o__Score__c</fullName>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>